# ITP_CPP

Iterators/: main.cpp
MultithreadFactory/: main.cpp
UniversityAccessSystem/: CMakeLists.txt  Readme.md  generator.cpp  generator.h  main.cpp  persons.cpp  persons.h  rooms.cpp  rooms.h
WendexTaxiBackend/: Admin.cpp  Admin.h  AdminGateway.cpp  AdminGateway.h  CMakeLists.txt  Car.cpp  Car.h  Characters.cpp  Characters.h  Driver.cpp  Driver.h  DriverGateway.cpp  DriverGateway.h  Gateway.cpp  Gateway.h  Passenger.cpp  Passenger.h  PassengerGateway.cpp  PassengerGateway.h  Readme.md  main.cpp  newOrder.cpp  newOrder.h  order.cpp  order.h
